--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         .container{
             background: #2A7B9B;
             background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(144, 208, 114, 1) 69%, rgba(156, 210, 110, 1) 73%, rgba(173, 212, 104, 1) 79%, rgba(237, 221, 83, 1) 100%);
-            width: 150vh;
-            height: 150vh;
+            width: 100vw;
+            height: 100vh;
             padding: 20px;
             display: flex;
             justify-content: center;
@@ -59,3 +59,4 @@
 </body>
 
 </html>
+
