--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             border: 0px;
             padding: 0px;
         }
-        .container{
+        body{
             background: #2A7B9B;
             background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(144, 208, 114, 1) 69%, rgba(156, 210, 110, 1) 73%, rgba(173, 212, 104, 1) 79%, rgba(237, 221, 83, 1) 100%);
-            width: 100vw;
-            height: 100vh;
+        }
+        .container{
             padding: 20px;
             display: flex;
             justify-content: center;
@@ -22,25 +22,42 @@
         }
         .box1{
             background-color: blanchedalmond;
-            width: 80%;
-            height: 250px;
+            width: 170vh;
+            height: 300px;
             padding: 50px;
             margin: 50px;
             border-radius: 30px;
         }
         .box2{
-            width: 80%;
-            height: 300px;
+            width: 185vh;
+            height: 400px;
             background-color: blanchedalmond;
-            padding: 50px;
             margin-bottom: 50px;
             margin-left: 50px;
             border-radius: 30px;
+        }
+        button{
+            width: 150px;
+            height: 70px;
+            padding: 20px;
+            
+            margin: 20px;
+            font-size: 15px;
+            font-weight: bold;
+            
+            background-color:cornflowerblue;
+            border-radius: 20px;
         }
         .navbar{
             width: 100%;
             height: 60px;
             background-color: blanchedalmond;
+        }
+        input{
+            width: 90px;
+            height: 25px;
+            background-color: cadetblue;
+            margin: 20px;
         }
     </style>
 </head>
@@ -50,13 +67,28 @@
 
         </div>
         <div class="box1">
-
+            <h2> My Classes</h2>
+            <form action="">
+                <button>DS</button>
+                <button>OS</button> 
+                <button>CN</button>
+                <button>TOC</button>
+                <button>Lr</button>
+                <button>CS</button>
+            </form>
+            <h2>Labs</h2>
+            <from>
+                <button>
+                     JAva Lab
+                </button>
+                <button>DS Lab</button>
+                <button>CN Lab</button>
+                <button>OS Lab</button>
+            </form>
         </div>
         <div class="box2">
-
+         <input type="button" value="upload image">
         </div>
     </div>
 </body>
-
 </html>
-
